# HeroCTF_v7

./: .gitignore  README.md  README_challenge_template.md  build_dynamic_challenges.sh  gen_challenge_yml.py  init.sh  start_static_challenges.sh  sync_challenges.sh
.github/: yaml_chall_checker.py
.github/workflows/: docker-build.yml  (+1 more)
Crypto/: docker-compose.yml
Forensics/: .gitattributes
Prog/: docker-compose.yml
Reverse/: docker-compose.yml
Reverse/rusty_pool_party/rusty_pool_party/: .dockerignore  Cargo.toml  Dockerfile  start.sh
Reverse/rusty_pool_party/rusty_pool_party/.cargo/: config.toml
Reverse/rusty_pool_party/rusty_pool_party/sleeping_pipe_challenge/: Makefile  c2_client_solver.py  c2_server.py  flag.txt  test_debug_injected.ps1  test_local.ps1
Reverse/rusty_pool_party/rusty_pool_party/sleeping_pipe_challenge/scripts/: extract_shellcode.sh  linker.ld
Reverse/rusty_pool_party/rusty_pool_party/sleeping_pipe_challenge/src/: alarm_shellcode.cpp  api_hashing.cpp  api_hashing.hpp  chkstk_stub.cpp  com_shellcode.cpp  compile_time_hash.hpp  config_type.hpp  debug_injected_master.cpp  file_shellcode.cpp  http_com.cpp  http_com.hpp  memory.cpp  memory.hpp  obfuscated_string.hpp  pipe_master_shellcode.cpp  pipe_protocol.hpp  rc4.hpp  shellcode_config.hpp  sleep_obfuscation.cpp  sleep_obfuscation.hpp  test_loader.cpp  utils.cpp  utils.hpp
Reverse/rusty_pool_party/rusty_pool_party/src/: global_allocator.rs  hash_macro.rs  main.rs  pool_party.rs  pool_party_std.rs  pool_party_tp_timer.rs.backup  print_no_std.rs  rc4.rs  syscall.rs  types.rs  utils.rs
(+394 files in other folders)
