[package]
name = "rusty_pool_party"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"
codegen-units = 1

[profile.test]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_NetworkManagement",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Networking_WinHttp",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    # TODO remove under
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Console",

]

[dependencies]
const-random = "=0.1.18"
xxhash-rust = { version = "0.8.15", features = ["const_xxh3"] }
ntapi = "=0.4.1"